src/objects/AC_Event_User_Segment__c.object
<CustomObject>
    <description>This object relates the User Segment to the actual event.</description>
    <fields>
        <fullName>AC_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AC Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>AC Event User Segments</relationshipLabel>
        <relationshipName>AC_Event_User_Segments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AC_User_Segment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AC User Segment</label>
        <referenceTo>AC_User_Segment__c</referenceTo>
        <relationshipLabel>AC Event User Segments</relationshipLabel>
        <relationshipName>AC_Event_User_Segments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Price_Deadline__c</fullName>
        <label>Early Bird Price Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Price__c</fullName>
        <label>Early Bird Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Preferences_Form_Fieldset__c</fullName>
        <label>Event Preferences Form Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Demand_Price__c</fullName>
        <label>On Demand Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Demand_Start_Date__c</fullName>
        <label>On Demand Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of ticket price if user belongs to multiple user segments. The lowest priority prevails.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AC Event User Segment</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>AC Event User Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Event User Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Early_Bird_Deadline_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(Early_Bird_Price__c)) , 
     ISBLANK( Early_Bird_Price_Deadline__c ) )</errorConditionFormula>
        <errorDisplayField>Early_Bird_Price_Deadline__c</errorDisplayField>
        <errorMessage>You must specify early bird price deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Early_Bird_Price_Deadline_Max_Value</fullName>
        <active>true</active>
        <errorConditionFormula>Early_Bird_Price_Deadline__c &gt; AC_Event__r.Start_Date__c</errorConditionFormula>
        <errorDisplayField>Early_Bird_Price_Deadline__c</errorDisplayField>
        <errorMessage>Early bird price deadline cannot be later than event start time.</errorMessage>
    </validationRules>
</CustomObject>